force-app/main/default/objects/UnifiedssotPartyIdentificationTun1__dlm/UnifiedssotPartyIdentificationTun1__dlm.object-meta.xml
<CustomObject>
    <mktDataModelAttributes>
        <creationType>Derived</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <isEnabled>true</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Related</objectCategory>
        <referenceEntityName>UnifiedPartyIdentification</referenceEntityName>
    </mktDataModelAttributes>
</CustomObject>