force-app/main/default/objects/UnifiedssotPartyIdentificationTun1__dlm/fields/rel_1712301902944_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1712301902944_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UnifiedssotPartyIdentificationTun1_s_rel</label>
    <referenceTo>UnifiedssotIndividualTun1__dlm</referenceTo>
    <relationshipLabel>UnifiedssotPartyIdentificationTun1_s_rel</relationshipLabel>
    <relationshipName>rel_1712301902944_end</relationshipName>
    <type>Lookup</type>
</CustomField>