force-app/main/default/objects/UnifiedssotPartyIdentificationTun1__dlm/fields/ssot__IdentificationNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__IdentificationNumber__c</fullName>
    <label>Identification Number</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IdentificationNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>