force-app/main/default/objects/UnifiedssotPartyIdentificationTun1__dlm/fields/ssot__PartyIdentificationTypeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PartyIdentificationTypeId__c</fullName>
    <label>Party Identification Type</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PartyIdentificationTypeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>